tests/e2e/entity_minus5.error
Error: syntax error in story at line 1, column 5

1|    123 = a + b
          ^

E0041: `=` is not allowed here
